JumpScript/tests/baselines/reference/jmpxElementResolution18.errors.txt
tests/cases/conformance/jsx/file1.jmpx(6,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== tests/cases/conformance/jsx/file1.jmpx (1 errors) ====
    declare module JSX {
    	interface Element { }
    }
    
    // Error under implicit any
    <div n='x' />;
    ~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    